--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="header">
                     <div class="nav-bar">
-                        <a href="landing.html" target="_blank" class="nav-link">About</a>
+                        <a href="index.html" target="_blank" class="nav-link">About</a>
                         <a href="#" class="nav-link">Pricing</a>
                         <a href="signup.html" target="_parent" class="nav-link">Sign Up</a>  
                         <a href="login.html" target="_parent"  class="nav-link">Login</a>
